--- a/Magic Harvest.csproj
+++ b/Magic Harvest.csproj
@@ -27,7 +27,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\..\build\extensions</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -40,16 +40,12 @@
     <Reference Include="Landis.Core.Implementation, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\Landis.Core.Implementation.2.0.0\lib\netstandard2.0\Landis.Core.Implementation.dll</HintPath>
     </Reference>
-    <Reference Include="Landis.Extension.BaseHarvest-v5, Version=5.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files\LANDIS-II-v7\extensions\Landis.Extension.BaseHarvest-v5.dll</HintPath>
-    </Reference>
     <Reference Include="Landis.Extension.BiomassHarvest-v4">
-      <HintPath>C:\Program Files\LANDIS-II-v7\extensions\Landis.Extension.BiomassHarvest-v4.dll</HintPath>
+      <HintPath>..\..\build\extensions\Landis.Extension.BiomassHarvest-v4.dll</HintPath>
     </Reference>
     <Reference Include="Landis.Library.HarvestManagement-v4, Version=4.2.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files\LANDIS-II-v7\extensions\Landis.Library.HarvestManagement-v4.dll</HintPath>
+      <HintPath>..\..\build\extensions\Landis.Library.HarvestManagement-v4.dll</HintPath>
     </Reference>
     <Reference Include="Landis.Library.SiteHarvest-v2, Version=2.1.0.0, Culture=neutral, PublicKeyToken=null" />
     <Reference Include="Landis.SpatialModeling, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
